--- a/.vscode/Css/sign_page.css
+++ b/.vscode/Css/sign_page.css
@@ -226,23 +226,24 @@ h2{
      background-color: #eee;
         font-size:14px;
 }
-/*.form_input:hover{
-    border: 1px solid black;
+.form_input:hover{
+    border: 1px solid rgb(70, 68, 68);
 }
 .form_input:focus{
-    border: 1px solid  black;
-}*/
+    border: 1px solid  rgb(70, 68, 68);
+}
 input[type="text"]:focus ~ label, .form_input:not(:placeholder-shown).form_input:not(:focus)~lable{
     top: -0.5em;
     padding: 0 0.125em;
     border: none;
     color: black;
+    background-color:#eee;
     font-weight: bold;
     font-size: 15px;
 }
 label{
     position: absolute;
-  color: #847e7e;
+  color: #696565;
     font-family: sans-serif;
     left: 1em;
     top: 0.75em;
