--- a/.vscode/Css/sign_page.css
+++ b/.vscode/Css/sign_page.css
@@ -85,13 +85,20 @@ background-color: #5487ed;
   outline: none;
 }*/
 
-.sign-up, .sign-in {
+.sign-up {
+  position: absolute;
+  top:10px;
+  right: 50px;
+  height: 100%;
+  transition: all 0.6s ease-in-out;
+}
+
+ .sign-in {
   position: absolute;
   top:-10px;
   height: 100%;
   transition: all 0.6s ease-in-out;
 }
-
 .sign-in {
   left: -10;
   width: 50%;
@@ -267,17 +274,6 @@ input[type="password"]:focus ~ label, .form_input:not(:placeholder-shown).form_i
     font-size: 15px;
 }
 
-/* input[type="date"]:focus ~ label, .form_input:not(:placeholder-shown).form_input:not(:focus)~label{
-    top: -0.5em;
-    padding: 0 0.125em;
-    border: none;
-    color: black;
-    background-color:#eee;
-    font-weight: bold;
-    font-size: 17px;
-} */
-
-
 label{
     position: absolute;
   color: #696565;
@@ -289,6 +285,19 @@ label{
     transition: top 350ms ease-in;
     font-size: 350ms ease-in;
 }
+
+.form_input_1 ,select{
+  width: 100%;
+  height: 100%;
+   border-radius: 0.5em;
+    outline: none;
+    border: transparent;
+    padding:0px 15px;
+     background-color: #eee;
+     color: rgb(91, 90, 90);
+        font-size:16px;
+}
+
 
 
 /*button section code*/
