--- a/wibside/project_hospital/index.css
+++ b/wibside/project_hospital/index.css
@@ -13,6 +13,11 @@
 }
 */
   
+.block{
+   animation: appear 5s linear;
+   animation-timeline: view();
+   animation-range:entry 0% cover;
+}
 .parents{
     display: flex;
     justify-content: space-between;
