add data in json

--- a/Example/star.css
+++ b/Example/star.css
@@ -39,7 +39,7 @@
 }
 
 /* Containers */
-.parents_main_4, .parents_main_5 {
+.parents_main_slider4, .parents_main_5 {
     width: 90%;
     height: 120px;
     overflow: hidden;
